    Added: MOUNT_CUSTOMER_LOGS parameter in apache/apache.data file (allows to disable logs bind mounts)
    Changed: Increased default limits for ProFTPD/VsFTPd
    Depreciated: CACHE_DATA_DIR (/var/cache/imscp) parameter
    Fixed: Allow access to .well-known folder in any case if exists (Apache2)
    Removed: Redundant MYSQL_PREFIX_TYPE parameter
    Removed: VARIABLE_DATA_DIR parameter

DATABASE
    Added: SPF type to the list of allowed DNS resource records
    Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
    Changed: i-MSCP now uses its own SQL user (master SQL user). See errata file for more details.
    Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

FRONTEND
    Added: iMSCP\Net class - Allow to get list of network devices and IP addresses (stdlib)
    Added: Datatable for the file system information table (admin level)
    Added: SPF DNS resource record type (validated as a TXT record) (client level)
    Changed: exec() PHP function is no longer disabled for the control panel
    Changed: The `type` field cannot longer be changed when editing a DNS resource record (client level)
    Changed: Support for nested MySQL transactions is now emulated using named transaction savepoints (stdlib)
    Fixed: Cannot add DKIM/DMARC DNS resource records (client level)
    Fixed: Could not retrieve network devices list under Debian Stretch (testing) - Related to #IP-1525 (admin level)
    Fixed: Customer must be allowed to set custom TTL value for any DNS resource record (client level)
    Fixed: Customer must be allowed to set `name` field of any DNS resource record (client level)
    Fixed: Could not remove database; There is no such grant defined for user... (stdlib)
    Fixed: Could not set URL redirect when adding domain alias; Bad request error page (client level)
    Fixed: IDNs are shown in IDNA form in several places