@@ -37,6 +37,9 @@ CONFIG
     Removed: Redundant MYSQL_PREFIX_TYPE parameter
     Removed: VARIABLE_DATA_DIR parameter
 
+CONTRIB
+    Added: PhpMyAdmin/10_phpmyadmin_conffile.pl listener file (Allows to override default configuration template file)
+
 DATABASE
     Added: SPF type to the list of allowed DNS resource records
     Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
